--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "0.3.4",
   "private": true,
   "scripts": {
-    "start": "cross-env TAILWIND_MODE=watch next-remote-watch ./data",
-    "dev": "cross-env TAILWIND_MODE=watch next dev",
-    "build": "next build && node ./scripts/generate-sitemap",
-    "serve": "next start",
-    "analyze": "cross-env ANALYZE=true next build",
-    "prepare": "husky install"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.6.0",
