--- a/.gitignore
+++ b/.gitignore
@@ -11,17 +11,15 @@
 # next.js
 /.next/
 /out/
-public/sitemap.xml
-.vercel
+
 
 # production
 /build
-*.xml
-# rss feed
-/public/index.xml 
+
 
 # misc
 .DS_Store
+*.pem
 
 # debug
 *.log
@@ -34,3 +32,6 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+# vercel
+.vercel
